<resources>
    <string name="app_name">BibleTools</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_filter">Filter</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_yes">Yes</string>
    <string name="action_donate">Donate</string>

    <string name="blank"/>

    <string name="title_about">About</string>
    <string name="label_email">Send with:</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_history">History</string>
    <string name="title_help">Help</string>
    <string name="title_all">All</string>
    <string name="title_ot">Old Testament</string>
    <string name="title_nt">New Testament</string>
    <string name="title_empty_favourites">No Favourites</string>
    <string name="title_information">Information</string>
    <string name="title_how_it_works">How It Works</string>
    <string name="title_make_donation">Make a Donation</string>
    <string name="title_base_theme">Base Theme</string>
    <string name="title_font_weght">Font Weight</string>
    <string name="title_font_regular">Regular</string>
    <string name="title_font_medium">Medium</string>
    <string name="title_font_light">Light</string>
    <string name="title_font_heavy">Heavy</string>

    <string name="search_hint">Enter reference</string>
    <string name="api_default_error">No resources were found matching&lt;br/> "&lt;b>'%s'&lt;/b>."</string>
    <string name="error_default">&lt;b>Something went wrong!&lt;/b>&lt;br/>&lt;br/>Please try that again.</string>
    <string name="error_no_connection">&lt;b>No Internet Connection!&lt;/b>&lt;br/>&lt;br/>Check your network connection and try again.</string>

    <string name="settings_about_preference">ABOUT</string>
    <string name="settings_back_history_summary">Navigate back to the previous verse when you tap/click the back button.</string>
    <string name="settings_back_history_title">Back button navigates back in history</string>
    <string name="settings_cache">CACHE</string>
    <string name="settings_cache_pref_title">Cache all References?</string>
    <string name="settings_cache_pref_summary">This will save all references you search for.</string>
    <string name="settings_cat_preference">PREFERENCES</string>
    <string name="settings_history_count_title">History Entries</string>
    <string name="settings_history_count_summary">Number of entries to show in History</string>
    <string name="settings_version">Build version</string>
    <string name="settings_web_app_title">Web App</string>
    <string name="settings_web_app_summary">Open the Web App</string>
    <string name="settings_support">SUPPORT</string>

    <string name="summary_base_theme">Choose your base theme (light/dark)</string>
    <string name="summary_font_weight">Adjust font weight</string>

    <string name="msg_helpful_title">Was this helpful?</string>
    <string name="msg_helpful_submitted">Thanks! We may rank this resource higher next time.</string>
    <string name="msg_unhelpful_submitted">Good to know, we may put this resource further down the list.</string>
    <string name="msg_how_it_works">Enter any Bible verse in the format <b>\'Genesis 1:1\'</b> and click on the Search icon on your keyboard to perform the search.\nAll References will load up as collapsed cards, Tap on the card to expand or collapse it.\n</string>
</resources>
