<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nam_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/title_favourites"/>

    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/non_check">

        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/action_feedback"
            android:title="@string/action_send_feedback"/>

        <item
            android:id="@+id/action_about"
            android:title="@string/title_about"/>

        <item
            android:id="@+id/action_donate"
            android:title="@string/action_donate"/>

    </group>

</menu>