<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rawcomposition.bibletools.info.ui.FavouritesActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_filter"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="ifRoom" >

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_show_all"
                    android:title="@string/title_all"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/action_ot"
                    android:title="@string/title_ot"
                    />
                <item
                    android:id="@+id/action_nt"
                    android:title="@string/title_nt"
                    />
            </group>

        </menu>
    </item>
</menu>
